Archive2/f6/c2f9d0268529de/output
main.cpp:1:57: error: rvalue reference to type 'int' cannot bind to lvalue of type 'int'
template <class T> T&& forward(T& t) noexcept  { return static_cast<T&>(t); }
                                                        ^~~~~~~~~~~~~~~~~~
main.cpp:5:20: note: in instantiation of function template specialization 'forward<int>' requested here
void test(T&& t) { forward<T>(t); }
                   ^
main.cpp:8:5: note: in instantiation of function template specialization 'test<int>' requested here
    test(0);
    ^
1 error generated.
